# WordSplitAbs.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
.ci/: beforeBuild.sh  pythonPackagesToInstallFromGit.txt
WordSplitAbs/: __init__.py  __main__.py
tests/: tests.py
