[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "WordSplitAbs"
authors = [{name = "KOLANICH"}]
description = "An abstraction layer around word splitters for python"
readme = "ReadMe.md"
keywords = ["WordSplitAbs"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.optional-dependencies]
wordninja = [
	"wordninja", # @ git+https://github.com/keredson/wordninja
]
wordsegment = [
	"wordsegment", # @ git+https://github.com/grantjenks/python-wordsegment.git
]
pythonnet = [
	"pythonnet", # @ git+https://github.com/pythonnet/pythonnet.git
]
cli = [
	"plumbum", # @ git+https://github.com/tomerfiliba/plumbum.git"
]
download = [
	"requests", # @ git+https://github.com/psf/requests.git
]

[project.urls]
Homepage = "https://codeberg.org/KAbs/WordSplitAbs.py"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
